src/z80asm/z80asm2/t/30-directive/expected/local_21.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/local_21.asm
Assembling t/30-directive/input/local_21.asm...
t/30-directive/input/local_21.asm:1:1: error: Unexpected LOCAL directive
    local ; outside macro
    ^
t/30-directive/input/local_21.asm:2:3: error: Unexpected LOCAL directive
    X local; outside macro
      ^
t/30-directive/input/local_21.asm:7:14: error: Unexpected token after LOCAL: 12
    	label local 12 ; extra input
    	            ^
t/30-directive/input/local_21.asm:8:1: error: Unexpected ENDM directive
    endm
    ^
# file: t/30-directive/input/local_21.asm
EndOfLine	"\n"	9:1	
# file: t/30-directive/input/local_21.asm
Identifier	"MACRO"	3:7	keyword=MACRO 
Identifier	"M1"	3:7	
EndOfLine	"\n"	3:7	
Identifier	"ENDM"	3:7	keyword=ENDM 
